--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body>
     <!-- Верхняя линия -->
 
-    <header>
+    <header class="page-header">
       <div class="container main-nav">
         <a class="logo primary" href="./index.html"> <span class="logo-item">Web</span>Studio </a>
         <nav>
@@ -33,7 +33,8 @@
           </ul>
         </nav>
         <ul class="contacts list">
-          <li class="item"><a class="contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <li class="item">
+            <a class="contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li class="item"><a class="contact" href="tel:+380991111111">+38 099 111 11 11</a></li>
         </ul>
@@ -169,9 +170,13 @@
           ><span class="logo-item">Web</span><span class="logo-down">Studio</span>
         </a>
         <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
-        <ul class="contacts list">
-          <li><a class="contact-down" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a class="contact-down" href="tel:+380991111111">+38 099 111 11 11</a></li>
+        <ul class="contacts-footer list">
+          <li class="item">
+            <a class="contact-down" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li class="item">
+            <a class="contact-down" href="tel:+380991111111">+38 099 111 11 11</a>
+          </li>
         </ul>
       </div>
     </footer>
