--- a/portfolio.html
+++ b/portfolio.html
@@ -20,10 +20,10 @@
   </head>
   <body>
     <!-- Верхняя линия -->
-    <header>
+    <header class="page-header">
       <div class="container main-nav">
+        <a class="logo primary" href="./index.html"> <span class="logo-item">Web</span>Studio </a>
         <nav>
-          <a class="logo primary" href="./index.html"> <span class="logo-item">Web</span>Studio </a>
           <ul class="site-nav list">
             <li class="item"><a class="link" href="./index.html">Студия</a></li>
             <li class="item"><a class="link current" href="">Портфолио</a></li>
@@ -31,7 +31,9 @@
           </ul>
         </nav>
         <ul class="contacts list">
-          <li class="item"><a class="contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li class="item">
+            <a class="contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
           <li class="item"><a class="contact" href="tel:+380991111111">+38 099 111 11 11</a></li>
         </ul>
       </div>
@@ -39,132 +41,170 @@
 
     <main>
       <!-- Портфолио -->
-      <section>
-        <h1 hidden>Портфолио</h1>
+      <section class="section">
+        <div class="container">
+          <h1 hidden>Портфолио</h1>
 
-        <!-- Фильтры -->
-        <ul class="filters list">
-          <li>
-            <button class="filter active" type="button">Все</button>
-          </li>
-          <li>
-            <button class="filter" type="button">Веб-сайты</button>
-          </li>
-          <li>
-            <button class="filter" type="button">Приложения</button>
-          </li>
-          <li>
-            <button class="filter" type="button">Дизайн</button>
-          </li>
-          <li>
-            <button class="filter" type="button">Маркетинг</button>
-          </li>
-        </ul>
+          <!-- Фильтры -->
 
-        <!-- Примеры работ -->
-        <ul class="works list">
-          <li>
-            <div>
-              <img
-                src="./images/img1p.jpg"
-                alt="Главная страница сайта Технокряк"
-                width="370"
-                height="294"
-              />
-              <h2 class="work-title">Технокряк</h2>
-              <span class="work-type">Веб-сайт</span>
-            </div>
-          </li>
-          <li>
-            <div>
-              <img
-                src="./images/img2p.jpg"
-                alt="Постер New Orlean vs Golden Star"
-                width="370"
-                height="294"
-              />
-              <h2 class="work-title">Постер New Orlean vs Golden Star</h2>
-              <p class="work-type">Дизайн</p>
-            </div>
-          </li>
-          <li>
-            <div>
-              <img
-                src="./images/img3p.jpg"
-                alt="Обложка приложения ресторана Seafood"
-                width="370"
-                height="294"
-              />
-              <h2 class="work-title">Ресторан Seafood</h2>
-              <p class="work-type">Приложение</p>
-            </div>
-          </li>
-          <li>
-            <div>
-              <img src="./images/img4p.jpg" alt="Наушники" width="370" height="294" />
-              <h2 class="work-title">Проект Prime</h2>
-              <p class="work-type">Маркетинг</p>
-            </div>
-          </li>
-          <li>
-            <div>
-              <img src="./images/img5p.jpg" alt="Коробки" width="370" height="294" />
-              <h2 class="work-title">Проект Boxes</h2>
-              <p class="work-type">Приложение</p>
-            </div>
-          </li>
-          <li>
-            <div>
-              <img
-                src="./images/img6p.jpg"
-                alt="Главная страница сайта Inspiration has no Borders"
-                width="370"
-                height="294"
-              />
-              <h2 class="work-title">Inspiration has no Borders</h2>
-              <p class="work-type">Веб-сайт</p>
-            </div>
-          </li>
-          <li>
-            <div>
-              <img src="./images/img7p.jpg" alt="Раскрытая книга" width="370" height="294" />
-              <h2 class="work-title">Издание Limited Edition</h2>
-              <p class="work-type">Дизайн</p>
-            </div>
-          </li>
-          <li>
-            <div>
-              <img src="./images/img8p.jpg" alt="Ярлык проекта LAB" width="370" height="294" />
-              <h2 class="work-title">Проект LAB</h2>
-              <p class="work-type">Маркетинг</p>
-            </div>
-          </li>
-          <li>
-            <div>
-              <img
-                src="./images/img9p.jpg"
-                alt="Экран компьютера с главной страницей"
-                width="370"
-                height="294"
-              />
-              <h2 class="work-title">Growing Business</h2>
-              <p class="work-type">Приложение</p>
-            </div>
-          </li>
-        </ul>
+          <ul class="filters list">
+            <li class="item">
+              <button class="filter active" type="button">Все</button>
+            </li>
+            <li class="item">
+              <button class="filter" type="button">Веб-сайты</button>
+            </li>
+            <li class="item">
+              <button class="filter" type="button">Приложения</button>
+            </li>
+            <li class="item">
+              <button class="filter" type="button">Дизайн</button>
+            </li>
+            <li class="item">
+              <button class="filter" type="button">Маркетинг</button>
+            </li>
+          </ul>
+
+          <!-- Примеры работ -->
+          <ul class="works list">
+            <li class="item">
+              <div class="work-card">
+                <img
+                  class="card-image"
+                  src="./images/img1p.jpg"
+                  alt="Главная страница сайта Технокряк"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="work-title">Технокряк</h2>
+                <span class="type">Веб-сайт</span>
+              </div>
+            </li>
+            <li class="item">
+              <div class="work-card">
+                <img
+                  class="card-image"
+                  src="./images/img2p.jpg"
+                  alt="Постер New Orlean vs Golden Star"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="work-title">Постер New Orlean vs Golden Star</h2>
+                <p class="type">Дизайн</p>
+              </div>
+            </li>
+            <li class="item">
+              <div class="work-card">
+                <img
+                  class="card-image"
+                  src="./images/img3p.jpg"
+                  alt="Обложка приложения ресторана Seafood"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="work-title">Ресторан Seafood</h2>
+                <p class="type">Приложение</p>
+              </div>
+            </li>
+            <li class="item">
+              <div class="work-card">
+                <img
+                  class="card-image"
+                  src="./images/img4p.jpg"
+                  alt="Наушники"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="work-title">Проект Prime</h2>
+                <p class="type">Маркетинг</p>
+              </div>
+            </li>
+            <li class="item">
+              <div class="work-card">
+                <img
+                  class="card-image"
+                  src="./images/img5p.jpg"
+                  alt="Коробки"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="work-title">Проект Boxes</h2>
+                <p class="type">Приложение</p>
+              </div>
+            </li>
+            <li class="item">
+              <div class="work-card">
+                <img
+                  class="card-image"
+                  src="./images/img6p.jpg"
+                  alt="Главная страница сайта Inspiration has no Borders"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="work-title">Inspiration has no Borders</h2>
+                <p class="type">Веб-сайт</p>
+              </div>
+            </li>
+            <li class="item">
+              <div class="work-card">
+                <img
+                  class="card-image"
+                  src="./images/img7p.jpg"
+                  alt="Раскрытая книга"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="work-title">Издание Limited Edition</h2>
+                <p class="type">Дизайн</p>
+              </div>
+            </li>
+            <li class="item">
+              <div class="work-card">
+                <img
+                  class="card-image"
+                  src="./images/img8p.jpg"
+                  alt="Ярлык проекта LAB"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="work-title">Проект LAB</h2>
+                <p class="type">Маркетинг</p>
+              </div>
+            </li>
+            <li class="item">
+              <div class="work-card">
+                <img
+                  class="card-image"
+                  src="./images/img9p.jpg"
+                  alt="Экран компьютера с главной страницей"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="work-title">Growing Business</h2>
+                <p class="type">Приложение</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <!-- Подвал -->
     <footer class="footer">
-      <a class="logo" href="./index.html"
-        ><span class="logo-item">Web</span><span class="logo-down">Studio</span></a
-      >
-      <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
-      <ul class="contacts list">
-        <li><a class="contact-down" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a class="contact-down" href="tel:+380991111111">+38 099 111 11 11</a></li>
-      </ul>
+      <div class="container">
+        <a class="logo secondary" href="./index.html"
+          ><span class="logo-item">Web</span><span class="logo-down">Studio</span>
+        </a>
+        <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
+        <ul class="contacts-footer list">
+          <li class="item">
+            <a class="contact-down" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li class="item">
+            <a class="contact-down" href="tel:+380991111111">+38 099 111 11 11</a>
+          </li>
+        </ul>
+      </div>
     </footer>
   </body>
 </html>
